--- a/index.html
+++ b/index.html
@@ -11,98 +11,98 @@
 	<body>
 		<header>
 			<nav class="navbar navbar-inverse" id="nav">
-			  <div class="container-fluid">
-			    <div class="navbar-header">
-			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-			        <span class="sr-only">Toggle navigation</span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			      </button>
-			      <a class="navbar-brand" href="#section2">Brand</a>
-			    </div>
-			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			      <ul class="nav navbar-nav">
-			        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-			        <li><a href="#">Link</a></li>
-			    </div>
-			  </div>
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+						 aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="#section2">Brand</a>
+					</div>
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+							<li><a href="#">Link</a></li>
+					</div>
+				</div>
 			</nav>
 		</header>
 		<section id="section1">
 			<div class="jumbotron">
-			  <h1>Hello,我叫潘宇，欢迎来到我的个人网站</h1>
-			  <p class="miaoshu">我毕业与广西水电学院，学习了数字媒体应用技术专业。非常想用代码画出我想看的画面</p>
-			  <p class="miaoshu">我是一个实事求是、不浮夸的人。喜欢参与团队工作与集体活动。重视自身素质培养。</p>
-			  <p class="jiange">
-				  <h2 class="p2">掌握的技能</h2>
-				  <div class="progress">
-				    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-				     HTML5 80%
-				    </div>
-				  </div>
-				  <div class="progress">
-				    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-				     CSS3 80%
-				    </div>
-				  </div>
-				  <div class="progress">
-				    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-				     PHP 70%
-				    </div>
-				  </div>
-				  <div class="progress">
-				    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-				     MySQL 75%
-				    </div>
-				  </div>
-				  <div class="progress">
-				    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
-				     JavaScript 85%
-				    </div>
-				  </div>
-			  </p>
+				<h1>Hello,我叫潘宇，欢迎来到我的个人网站</h1>
+				<p class="miaoshu">我毕业与广西水电学院，学习了数字媒体应用技术专业。非常想用代码画出我想看的画面</p>
+				<p class="miaoshu">我是一个实事求是、不浮夸的人。喜欢参与团队工作与集体活动。重视自身素质培养。</p>
+				<p class="jiange">
+					<h2 class="p2">掌握的技能</h2>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+							HTML5 80%
+						</div>
+					</div>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+							CSS3 80%
+						</div>
+					</div>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+							PHP 70%
+						</div>
+					</div>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+							MySQL 75%
+						</div>
+					</div>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+							JavaScript 85%
+						</div>
+					</div>
+				</p>
 			</div>
 		</section>
 		<section class="bg2" id="section2">
 			<div class="jiange2">
 				<div class="rows">
-				  <div class="col-sm-6 col-md-4">
-				    <div class="thumbnail">
-				      <div class="caption">
-				        <h3>在校经历</h3>
-				        <p>在图书馆前台服务</p>
-				        <!-- <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> -->
-				      </div>
-				    </div>
-				  </div>
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<div class="caption">
+								<h3>在校经历</h3>
+								<p>在图书馆前台服务</p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="rows">
-				  <div class="col-sm-6 col-md-4">
-				    <div class="thumbnail">
-				      <div class="caption">
-				        <h3>工作经历</h3>
-				        <!-- <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> -->
-				      </div>
-				    </div>
-				  </div>
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<div class="caption">
+								<h3>工作经历</h3>
+								<p>东莞新科电子科技有限公司</p>
+								<p>东莞银辉电子</p>
+								<p>广西金岸网络科技有限公司</p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="rows">
-				  <div class="col-sm-6 col-md-4">
-				    <div class="thumbnail">
-				      <div class="caption">
-						  <div class="bg">
-							  <h3>项目经验</h3>
-							  <p>螺狮粉后台管理系统界面</p>
-							  <p>仿工商银行首页</p>
-							  <p>浩宇商城</p>
-							  <p>动画网站</p>
-						  </div>
-				        
-				        <!-- <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> -->
-				      </div>
-				    </div>
-				  </div>
+					<div class="col-sm-6 col-md-4">
+						<div class="thumbnail">
+							<div class="caption">
+								<div class="bg">
+									<h3>项目经验</h3>
+									<p>螺狮粉后台管理系统界面</p>
+									<p>仿工商银行首页</p>
+									<p>浩宇商城</p>
+									<p>动画网站</p>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
