--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<section id="section1">
 			<div class="jumbotron">
 			  <h1>Hello,我叫潘宇，欢迎来到我的个人网站</h1>
-			  <p class="miaoshu">我毕业与广西水电学院，学习了数字媒体应用技术专业。非常想用代码画出我想看的画面</p>
+			  <p class="miaoshu">我毕业于广西水电学院，学习了数字媒体应用技术专业。非常想用代码画出我想看的画面</p>
 			  <p class="miaoshu">我是一个实事求是、不浮夸的人。喜欢参与团队工作与集体活动。重视自身素质培养。</p>
 			  <p class="jiange">
 				  <h2 class="p2">掌握的技能</h2>
